# docker_deucalion_client_builder

./: README.md  build_all.bat  build_all.sh
deucalion/: Dockerfile  install_dotnet.ps1
ltsc2016buildtools/: Dockerfile
ltsc2016vsbuilder/: Dockerfile
ltsc2016vschocorust/: Dockerfile
ltsc2016vschocorustdep/: Cargo.toml  Dockerfile
ltsc2019vsbtnet4.8/: Dockerfile  install-dotnet-4.8.ps1
ltsc2019vsbtnet4.8builder/: Dockerfile
ltsc2019vsbtnet4.8chocolatey/: Dockerfile
ltsc2019vsbtnet4.8chocorust/: Dockerfile
ltsc2019vsbtnet4.8chocorustdep/: Dockerfile
ltsc2019vsbuildtools/: Dockerfile
