[package]
name = "dummy_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = [
  "io-util",
  "sync",
  "rt",
  "rt-multi-thread",
  "net",
  "time",
  "macros",
] }
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1"
stream-cancel = "0.8.2"
log = "0.4"
simplelog = "0.12"
retour = { version = "0.3", features = ["static-detour"] }
parking_lot = "0.12"
pelite = "0.10"
memchr = "2"
once_cell = "1.19"
binary-layout = "3.2"
dirs = "5.0"
strum = "0.26"
strum_macros = "0.26"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "minwindef",
  "minwinbase",
  "processthreadsapi",
  "libloaderapi",
  "consoleapi",
  "wincon",
  "tlhelp32",
] }

[dev-dependencies]
ntest = "0.9"
rand = "0.8.5"

[build-dependencies]
winres = "0.1"
